# loghive

./: .env.example  .gitignore  README.md  docker-compose.yml  rebuild.bat
api/: .env.example  index.js  package-lock.json  package.json  seed.js
api/config/: mongodb.js  mysql.js  redis.js
api/middleware/: apiKey.js  auth.js
api/models/: AlertRule.js  App.js  AppApiKey.js  Log.js  NotificationRule.js  OrgEmailSettings.js  Organization.js  User.js  UserAppAccess.js  index.js
api/queues/: logQueue.js  notificationQueue.js
api/routes/: alerts.js  apps.js  auth.js  dashboard.js  emailSettings.js  ingest.js  logs.js  notifications.js  organizations.js
api/services/: alertChecker.js  alertScheduler.js  email.js  emailRateLimit.js  fatalAlert.js  notificationScheduler.js
api/workers/: logWriter.js  notificationWorker.js
app/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.js  index.css  index.js
app/src/api/: alerts.js  apps.js  auth.js  client.js  dashboard.js  emailSettings.js  logs.js  notifications.js  organization.js
app/src/auth/: AuthContext.js  ProtectedRoute.js
app/src/components/: ApiKeyModal.js  ApiKeyTable.js  AppCard.js  AppSelector.js  InviteMemberModal.js  LogCharts.js  LogFilters.js  LogLevelTag.js  LogTable.js  MemberTable.js  RoleBadge.js  StatsCards.js
landing/: docs.html  index.html
sdk/dotnet/: README.md
sdk/nodejs/: README.md  index.d.ts  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/loghive/: __init__.py  client.py
(+27 files in other folders)
