[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loghive-sdk"
version = "1.0.0"
description = "Python SDK for LogHive log ingestion"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = ["requests>=2.20.0"]

[project.urls]
Repository = "https://github.com/slient-commit/loghive"
